# Neural-Search-Augmented-Deep-RL-Engine

./: .gitignore  README.md  requirements.txt
FINAL/chess_ai/: academic_references.md  chess_ai_report.md  nohup.out  requirements.txt  run.py  setup_environment.sh  test_debug.pgn  testing_log.txt  train_supervised_with_evaluation.py  training_log.txt
FINAL/chess_ai/game_engine/: CMakeLists.txt  bayeselo_runner.py  chess_env.py  cnn.py  cnn_colab.py  cnn_evaluation.py  cnn_old.py  cnn_upgraded.py  cnn_v1_backup.py  commands.txt  debug_bayeselo.py  eval_test_local.py  evaluation.py  main.py  mcts.py  mcts_worker_cpp.py  migrate_model.py  migrate_to_v2.py  neural_net.py  plot_metrics.py  sanity_check.py  test_script.py  test_worker.py  trainer.py  verify_mate.py  verify_migration.py  verify_migration_v2.py
FINAL/chess_ai/game_engine/evaluation/pgn/: eval_20251220_041939.pgn  iter_34_1765588902.pgn  iter_44_1765802236.pgn  iter_45_1765832768.pgn  iter_46_1765863567.pgn  iter_48_1765937578.pgn  iter_49_1765963797.pgn  iter_51_1767235820.pgn
FINAL/chess_ai/game_engine/model/: final_test_metrics.json  metrics.json  qualitative_log.txt
FINAL/chess_ai/game_engine/src/: mcts_engine.cpp  mcts_engine.h  python_bridge.cpp
Testing/Context/: alphazero_context_form.txt
Testing/Market-research/: Market-Research.md  generate_charts.py  generate_final_charts.py
test/: check_dataset.py  check_gpu.py
test/data/: create_dataset.py  diagnose_games.py  download_lichess.py  memory_efficient_dataloader.py  verify_dataset.py
test/docs/: memory_guide.md
test/mcts/: PARALLEL_IMPLEMENTATION_SUMMARY.txt  QUICKSTART.txt  README.txt  __init__.py  cnn_colab.py  cuda_analysis.txt  evaluate_pure_mcts.py  mcts_evaluation.py  mcts_tree.py  (+8 more)
(+8699 files in other folders)
